--- a/angular.html
+++ b/angular.html
@@ -16,7 +16,7 @@
         var MyFunc = function() {
             this.name = "Welcome name";
             this.$get = function() {
-                this.name = "new name"
+                this.name = "my name name"
                 return "Hello from MyFunc.$get(). this.name = " + this.name;
             };
             return "Hello from MyFunc(). this.name = " + this.name;
