--- a/angular.html
+++ b/angular.html
@@ -22,7 +22,7 @@
             return "Hello from MyFunc(). this.name = " + this.name;
         };
         // returns the actual function
-        app.service( 'myService test', MyFunc );
+        app.service( 'myService testing', MyFunc );
         // returns the function's return value
         app.factory( 'myFactory', MyFunc );
         // returns the output of the function's $get function
